[package]
name = "tagver"
version = "0.1.0"
edition = "2021"
authors = ["tagver Contributors"]
license = "Apache-2.0"
description = "Core library for minimalistic versioning using Git tags"
repository = "https://github.com/wyrd-company/tagver"
readme = "../../README.md"
documentation = "https://docs.rs/tagver"
rust-version = "1.75"
keywords = ["versioning", "semver", "git", "build"]
categories = ["development-tools", "development-tools::build-utils"]

[package.metadata.docs.rs]
all-features = false
no-default-features = false

[dependencies]
# Core Git functionality
gix = "0.75"

# Version parsing and manipulation  
semver = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
log = "0.4"

# Utilities
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"
test-case = "3.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[bench]]
name = "version_calculation"
harness = false
